# final-project-lregi001-njaga003-krazo003-fsan003

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
.github/workflows/: main.yml  master.yml
include/: folder.h  folderManager.h  note.h  runMenus.h
src/: folder.cpp  folderManager.cpp  main.cpp  note.cpp  runMenus.cpp
tests/: readFrom.txt  testFolManager.cpp  testFolder.cpp  testNote.cpp  testRunMenus.cpp
